--- a/config.json
+++ b/config.json
@@ -25,10 +25,20 @@
         "center_cam_idx": 7,
         "center_img_name": "00000",
         "intrinsics": {
-           "n_max_imgs": 30
+           "n_max_imgs": 20
         },
         "extrinsics": {
-            "n_max_stereo_imgs": 30
+            "n_max_stereo_imgs": 50
         }
+    },
+    "bundle_adjustment":
+    {
+        "max_iter": 1000,
+        "num_thread": 4,
+        "function_tolerance": 1e-12,
+        "parameter_tolerance": 1e-12,
+        "gradient_tolerance": 1e-12,
+        "inner_iteration_tolerance": 1e-12
     }
+
 }
