--- a/multicamcalib/config.json
+++ b/multicamcalib/config.json
@@ -1,8 +1,13 @@
 {
     "paths": {
         "image_paths_file": "./image_paths.txt",
-        "output_dir": "../output",
-        "corners": "../output/corners"
+        "logs": "../output/logs",
+        "corners": "../output/corners",
+        "vae_outlier_detector": "../output/vae_outlier_detector",
+        "corner_crops": "../output/vae_outlier_detector/corner_crops",
+        "outliers": "../output/vae_outlier_detector/outliers",
+        "cam_params": "../output/cam_params",
+        "world_points": "../output/world_points"
     },
     "checkerboard": {
         "n_cols": 11,
@@ -16,7 +21,7 @@
         "z_dim": 2,
         "kl_weight": 0.001,
         "lr": 0.001,
-        "n_epochs": 4000,
+        "n_epochs": 1000,
         "batch_size": 1000,
         "outlier_thres": 0.001
     },
