linux installation started

--- a/ceres_bundle_adjustment/CMakeLists.txt
+++ b/ceres_bundle_adjustment/CMakeLists.txt
@@ -14,25 +14,31 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR})
 
 
-# copy dlls
-set(CERES_ROOT_DIR "C:/Users/hjoon/ceres")
-set(SUITESPARSE_WIN_x64_DIR "${CERES_ROOT_DIR}/suitesparse/lapack_windows/x64")
-set(PROJECT_OUTPUT_DIR_RELEASE "${PROJECT_OUTPUT_DIR}/Release")
-set(DLL_PATHS 
-    "${SUITESPARSE_WIN_x64_DIR}/libblas.dll"
-    "${SUITESPARSE_WIN_x64_DIR}/liblapack.dll"
-    "${SUITESPARSE_WIN_x64_DIR}/libgcc_s_sjlj-1.dll"
-    "${SUITESPARSE_WIN_x64_DIR}/libgfortran-3.dll"
-    "${SUITESPARSE_WIN_x64_DIR}/libquadmath-0.dll"
-    "${CERES_ROOT_DIR}/glog/install/bin/glog.dll"
-    "${CERES_ROOT_DIR}/glog/install/bin/glog.dll"
-)
+#############################################
+if (WIN32)
+    # copy dlls
+    set(CERES_ROOT_DIR "C:/Users/hjoon/ceres")
+    set(SUITESPARSE_WIN_x64_DIR "${CERES_ROOT_DIR}/suitesparse/lapack_windows/x64")
+    set(PROJECT_OUTPUT_DIR_RELEASE "${PROJECT_OUTPUT_DIR}/Release")
+    set(DLL_PATHS 
+        "${SUITESPARSE_WIN_x64_DIR}/libblas.dll"
+        "${SUITESPARSE_WIN_x64_DIR}/liblapack.dll"
+        "${SUITESPARSE_WIN_x64_DIR}/libgcc_s_sjlj-1.dll"
+        "${SUITESPARSE_WIN_x64_DIR}/libgfortran-3.dll"
+        "${SUITESPARSE_WIN_x64_DIR}/libquadmath-0.dll"
+        "${CERES_ROOT_DIR}/glog/install/bin/glog.dll"
+        "${CERES_ROOT_DIR}/glog/install/bin/glog.dll"
+    )
+    file(COPY ${DLL_PATHS}
+        DESTINATION ${PROJECT_OUTPUT_DIR_RELEASE})
+endif()
+#############################################
+if (UNIX AND NOT APPLE)
 
-file(COPY ${DLL_PATHS}
-    DESTINATION ${PROJECT_OUTPUT_DIR_RELEASE})
+endif()
+#############################################
 
 configure_file(src/config.h.in ./../src/config.h)
-
 
 add_executable(${TARGET_NAME} src/main.cpp)
 
@@ -40,15 +46,20 @@ target_include_directories(${TARGET_NAME} PUBLIC
                             "include"
                             )
 
-# link external ceres library
-# find_package(Ceres REQUIRED)
-find_package(Ceres REQUIRED PATHS "${CERES_ROOT_DIR}/ceres-install")
+#############################################
+if (WIN32)
+    # link external ceres library
+    # find_package(Ceres REQUIRED)
+    find_package(Ceres REQUIRED PATHS "${CERES_ROOT_DIR}/ceres-install") # if the install directory is not in your PATH
+endif()
+if (LINUX AND NOT APPLE)
+    find_package(Ceres REQUIRED)
+endif()
 
 target_include_directories(${TARGET_NAME}
     PRIVATE
     ${CERES_INCLUDE_DIRS}
 )
-
 target_link_libraries(${TARGET_NAME}
     PRIVATE
     ${CERES_LIBRARIES}
