linux cmake done compiling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.in": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "core": "cpp",
+        "array": "cpp"
     }
 }
