debugging cam retargeting part

--- a/multicamcalib/config.json
+++ b/multicamcalib/config.json
@@ -1,7 +1,7 @@
 {
     "paths": {
         "image_paths_file": "D:/Pictures/2021_06_12_SynthCheckerboards/image_paths.txt",
-        "output_dir": "../output_synth",
+        "output_dir": "D:/OneDrive - University of Utah/HJ/PhD/Research/190817_FullBodyCapture/Codes/210410_MultiCamCalib/python/output_synth",
         "logs": "logs",
         "corners": "corners",
         "vae_outlier_detector": "vae_outlier_detector",
@@ -26,24 +26,24 @@
         "n_epochs": 500,
         "lr": 0.001,
         "batch_size": 1000,
-        "outlier_thres_ratio": 0.001
+        "outlier_thres_ratio": 0.005
     },
     "calib_initial": {
         "center_cam_idx": 7,
         "center_img_name": "0000",
         "intrinsics": {
-            "n_max_imgs": 20
+            "n_max_imgs": 40
         },
         "extrinsics": {
-            "n_max_stereo_imgs": 60
+            "n_max_stereo_imgs": 3
         }
     },
     "bundle_adjustment": {
         "max_iter": 5000,
         "num_thread": 4,
-        "function_tolerance": 1e-12,
-        "parameter_tolerance": 1e-12,
-        "gradient_tolerance": 1e-12,
-        "inner_iteration_tolerance": 1e-12
+        "function_tolerance": 1e-15,
+        "parameter_tolerance": 1e-15,
+        "gradient_tolerance": 1e-15,
+        "inner_iteration_tolerance": 1e-15
     }
 }
