--- a/ceres_bundle_adjustment/src/config.h.in
+++ b/ceres_bundle_adjustment/src/config.h.in
@@ -63,6 +63,7 @@ struct Config {
     double function_tolerance, parameter_tolerance, gradient_tolerance, inner_iteration_tolerance;
     int chb_n_rows, chb_n_cols, chb_sqr_size;
     int n_cams, center_cam_idx;
-
+    
+    std::string center_img_name;
     std::string dir_output, dir_cam_params, dir_corners, dir_outliers, dir_world_points, dir_ceres_output;
 };
