--- a/multicamcalib/config.json
+++ b/multicamcalib/config.json
@@ -1,7 +1,7 @@
 {
     "paths": {
-        "image_paths_file": "D:/Pictures/2021_06_12_SynthCheckerboards/image_paths.txt",
-        "output_dir": "D:/OneDrive - University of Utah/HJ/PhD/Research/190817_FullBodyCapture/Codes/210410_MultiCamCalib/python/output_synth",
+        "image_paths_file": "C:/Users/hjoon/OneDrive/Desktop/MultiCamCalib/2021_06_12_SynthCheckerboards/image_paths.txt",
+        "output_dir": "C:/Users/hjoon/OneDrive/Desktop/MultiCamCalib/output_synth",
         "logs": "logs",
         "corners": "corners",
         "vae_outlier_detector": "vae_outlier_detector",
@@ -32,14 +32,14 @@
         "center_cam_idx": 7,
         "center_img_name": "0000",
         "intrinsics": {
-            "n_max_imgs": 30
+            "n_max_imgs": 40
         },
         "extrinsics": {
-            "n_max_stereo_imgs": 4
+            "n_max_stereo_imgs": 3
         }
     },
     "bundle_adjustment": {
-        "max_iter": 5000,
+        "max_iter": 1000,
         "num_thread": 4,
         "function_tolerance": 1e-15,
         "parameter_tolerance": 1e-15,
