--- a/multicamcalib/config_original.json
+++ b/multicamcalib/config_original.json
@@ -1,7 +1,7 @@
 {
     "paths": {
-        "image_paths_file": "image_paths.txt",
-        "output_dir": "../output",
+        "image_paths_file": "D:/OneDrive - University of Utah/HJ/PhD/Research/190817_FullBodyCapture/Codes/210410_MultiCamCalib/python/multicamcalib/image_paths.txt",
+        "output_dir": "D:/OneDrive - University of Utah/HJ/PhD/Research/190817_FullBodyCapture/Codes/210410_MultiCamCalib/python/output",
         "logs": "logs",
         "corners": "corners",
         "vae_outlier_detector": "vae_outlier_detector",
@@ -35,12 +35,13 @@
             "n_max_imgs": 20
         },
         "extrinsics": {
-            "n_max_stereo_imgs": 60
+            "n_max_stereo_imgs": 10
         }
     },
     "bundle_adjustment": {
         "max_iter": 1000,
         "num_thread": 4,
+        "lens_coeffs_reg_weight": 0.1,
         "function_tolerance": 1e-12,
         "parameter_tolerance": 1e-12,
         "gradient_tolerance": 1e-12,
