lens distortion fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 __pycache__/
-output/
-output_synth/
-output_/
 .vs/
 .vscode/
 build/
 .ceres_project2/
 .jpg
 notebooks/
+config_original.json
+example_images/
+example_images_katey/
+output/
+output_synth/
+output_/
+output_katey/
+output_example/
