--- a/ceres_bundle_adjustment/src/config.h.in
+++ b/ceres_bundle_adjustment/src/config.h.in
@@ -5,7 +5,7 @@
 
 #define ROOT_DIR "@CMAKE_CURRENT_SOURCE_DIR@"
 #define NUM_CAM_PARAMS 15
-#define TEST "@CERES_INCLUDE_DIRS"
+// #define CERES_INCLUDE_DIRS "@CERES_INCLUDE_DIRS"
 
 // check platform
 #if defined(WIN32) || defined(_WIN32) || defined(__WIN32__) || defined(__NT__)
